# Vire

./: .gitignore  Cargo.toml  DESIGN.md  DONE.md  LICENSING.md  README.md  TODO.md  fuzz_fail_10.c  fuzz_fail_10.vr  fuzz_fail_101.c  fuzz_fail_101.vr  fuzz_fail_103.c  fuzz_fail_103.vr  fuzz_fail_109.c  fuzz_fail_109.vr  fuzz_fail_111.c  fuzz_fail_111.vr  fuzz_fail_112.c  fuzz_fail_112.vr  fuzz_fail_116.c  fuzz_fail_116.vr  fuzz_fail_125.c  fuzz_fail_125.vr  fuzz_fail_135.c  fuzz_fail_135.vr  fuzz_fail_14.c  fuzz_fail_14.vr  fuzz_fail_141.c  fuzz_fail_141.vr  fuzz_fail_146.c  fuzz_fail_146.vr  fuzz_fail_15.c  fuzz_fail_15.vr  fuzz_fail_16.c  fuzz_fail_16.vr  fuzz_fail_18.c  fuzz_fail_18.vr  fuzz_fail_20.c  fuzz_fail_20.vr  fuzz_fail_22.c  (+55 more)
build-integration/meson/example/: main.vr  meson.build  util.c
crates/csolver/absint/: Cargo.toml
crates/csolver/absint/Verification/: README.md
crates/csolver/absint/src/: analysis.rs  analysis_tests.rs  cond.rs  domain.rs  engine.rs  env.rs  induction.rs  induction_tests.rs  interval.rs  lib.rs  pointsto.rs  relational.rs  zone.rs
crates/csolver/asm/: Cargo.toml
crates/csolver/asm/Verification/: README.md
crates/csolver/asm/src/: arm64.rs  arm64_text.rs  arm64_text_tests.rs  blocks.rs  lib.rs  x86.rs  x86text.rs  x86text_tests.rs
crates/csolver/asm/src/x86/: cond.rs  decode.rs  display.rs  lower.rs  opcode.rs  sse.rs  typed.rs  vex.rs
crates/csolver/asm/src/x86text/: att.rs  intel.rs
crates/csolver/asm/tests/: bridge_soundness.rs  x86_length_diff.rs  x86_semantics_diff.rs
crates/csolver/asm/tests/data/: big.c  c2.c  corpus.c  extra.s  regen.sh  x86_length_corpus.txt
crates/csolver/cfg/: Cargo.toml
crates/csolver/cfg/Verification/: README.md
crates/csolver/cfg/src/: dominators.rs  graph.rs  lib.rs  loops.rs
crates/csolver/cli/: Cargo.toml
crates/csolver/cli/Verification/: README.md
crates/csolver/cli/src/: cli_tests.rs  demo.rs  findings.rs  main.rs  scan.rs  scan_dir.rs  scan_run.rs  verify.rs
crates/csolver/contracts/: Cargo.toml
crates/csolver/contracts/Verification/: README.md
crates/csolver/contracts/data/: alloc.contract  barrier.contract  free.contract  kernel_sync.contract  lifetime.contract  mmio.contract  provenance.contract  rcu.contract  taint.contract  thread.contract  typestate.contract  user_copy.contract
crates/csolver/contracts/src/: contracts_tests.rs  lib.rs  parse.rs
crates/csolver/core/: Cargo.toml
crates/csolver/core/Verification/: README.md
crates/csolver/core/src/: error.rs  hash.rs  lib.rs  location.rs  obligation.rs  proof.rs  property.rs  region.rs  value.rs  verdict.rs
crates/csolver/elf/: Cargo.toml
crates/csolver/elf/Verification/: README.md
crates/csolver/elf/src/: aux.rs  consts.rs  dwarf.rs  dwarf_line.rs  dwarf_line_tests.rs  elf_tests.rs  elf_tests2.rs  elf_tests3.rs  iso.rs  iso_tests.rs  lib.rs  load.rs  load_generic.rs  load_generic_tests.rs  lzx.rs  macho.rs  macho_tests.rs  pe.rs  pe_tests.rs  reloc.rs  types.rs  udf.rs  udf_tests.rs  wim.rs  wim_tests.rs
crates/csolver/elf/tests/: dwarf_pointee.rs
crates/csolver/ir/: Cargo.toml
crates/csolver/ir/Verification/: README.md
crates/csolver/ir/src/: frontend.rs  func.rs  func_tests.rs  id.rs  inst.rs  lib.rs  ops.rs  ty.rs
crates/csolver/llvm/: Cargo.toml
crates/csolver/llvm/Verification/: README.md
crates/csolver/llvm/src/: debuginfo.rs  debuginfo_tests.rs  lexer.rs  lib.rs  llvm_tests.rs  llvm_tests2.rs  lower.rs  parser.rs
crates/csolver/llvm/src/lower/: asmops.rs  block.rs  contract.rs  gep.rs  slices.rs
crates/csolver/llvm/src/parser/: ast.rs  attrs.rs  func.rs  globals.rs  helpers.rs  inst.rs  lex.rs  tests.rs
crates/csolver/memory/: Cargo.toml
crates/csolver/memory/Verification/: README.md
crates/csolver/memory/src/: access.rs  alias.rs  lib.rs  pointer.rs  region.rs
crates/csolver/mir/: Cargo.toml
crates/csolver/mir/Verification/: README.md
crates/csolver/mir/src/: lexer.rs  lib.rs  lower.rs  parser.rs
crates/csolver/mir/src/lower/: helpers.rs  place.rs  stmt.rs
crates/csolver/mir/src/parser/: body.rs  expr.rs  helpers.rs  types.rs
crates/csolver/parser/: Cargo.toml
crates/csolver/parser/Verification/: README.md
crates/csolver/parser/src/: lib.rs
crates/csolver/report/: Cargo.toml
crates/csolver/report/Verification/: README.md
crates/csolver/report/src/: lib.rs
crates/csolver/solver/: Cargo.toml
crates/csolver/solver/Verification/: README.md
crates/csolver/solver/src/: bitblast.rs  bitblast_tests.rs  bitprecise.rs  blaster.rs  expr.rs  expr_tests.rs  lib.rs  linear.rs  sat.rs  sat_learn.rs  sat_tests.rs
crates/csolver/symbolic/: Cargo.toml
crates/csolver/symbolic/Verification/: README.md
crates/csolver/symbolic/src/: exec.rs  lib.rs  lockclass.rs  summary.rs  sync.rs
crates/csolver/symbolic/src/exec/: calls.rs  checks.rs  classify.rs  decide.rs  driver.rs  effects.rs  eval.rs  loadrec.rs  loops.rs  merge.rs  mergecore.rs  sentinel.rs  state.rs  step.rs  step_contract.rs  step_mem.rs  value.rs
crates/csolver/symbolic/src/summary/: facts.rs  module.rs  perfn.rs  tests.rs
crates/csolver/verifier/: Cargo.toml
crates/csolver/verifier/Verification/: README.md
crates/csolver/verifier/src/: assumptions.rs  contracts.rs  datarace.rs  discharge.rs  interleave.rs  lib.rs  lockorder.rs  mem2reg.rs  precond.rs  report.rs  run.rs  wholeprog.rs
crates/csolver/verifier/src/contracts/: facts.rs  fields.rs  fieldsyn.rs  ptr.rs  scalars.rs  site.rs  tests.rs  tests2.rs  tests3.rs
crates/csolver/verifier/src/interleave/: aba.rs  atomicity.rs  (+5 more)
crates/driver/: Cargo.toml
crates/driver/src/: gpu_runtime.c  main.rs  runtime.c  vk_runtime.c
crates/vire/: Cargo.toml
crates/vire-wasm/: Cargo.toml
crates/vire-wasm/src/: main.rs
crates/vire/src/: analyze.rs  ast.rs  cblock.rs  comptime.rs  cverify.rs  derive.rs  diag.rs  expand.rs  fmt.rs  infer.rs  inline.rs  itemmacro.rs  lexer.rs  lib.rs  lower.rs  main.rs  parser.rs  platform.rs  pybridge.c  shader.rs  spawn.rs  syntax.rs  tygraph.rs
crates/vire/tests/: infer.rs  lex_parse.rs  lower.rs  syntax.rs
(+561 files in other folders)
