[workspace]
resolver = "2"
members = [
    "crates/vire",       # Vire-Front-End (Lexer/Parser/AST → SSA-IR); im Aufbau
    "crates/ir",         # geteilte Mittel-IR (Absenkziel)
    "crates/solver",     # geteilt: Devirt/Escape/RC/Bounds
    "crates/backend",    # geteilt: LLVM-Emission
    # --- Bootstrap (Java→IR): Backend-Soundness-Wächter + M0-Messbasis,
    #     wird nach FRONTEND-PLAN §„Java-Ablöse-Kriterien" entfernt ---
    "crates/classfile",
    "crates/frontend",
    "crates/driver",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[profile.release]
lto = true
