[workspace]
resolver = "2"
members = [
    "crates/vire",       # Vire front-end (lexer/parser/AST → SSA IR)
    "crates/ir",         # shared mid-level IR (lowering target)
    "crates/solver",     # shared: devirt/escape/RC/bounds
    "crates/backend",    # shared: LLVM emission
    # --- Bootstrap (Java→IR): backend soundness oracle + M0 measurement base,
    #     removed per FRONTEND-PLAN §"Java retirement criteria" ---
    "crates/classfile",
    "crates/frontend",
    "crates/driver",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[profile.release]
lto = true
