[package]
name = "csolver-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared contracts for CSolver: verdicts, proof obligations, proof trees, counterexamples, values."

[lints]
workspace = true
