[package]
name = "csolver-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Symbolic memory model: regions, pointers, provenance, permissions, alignment, lifetimes."

[dependencies]
csolver-core.workspace = true

[lints]
workspace = true
