[package]
name = "csolver-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Constraint IR, simplification, and translation of obligations into SMT queries."

[dependencies]
csolver-core.workspace = true
csolver-memory.workspace = true

[lints]
workspace = true
